# AdventOfCode

./: .gitignore  tmp.txt
2021/Day1/: Day 1 - Advent of Code 2021.html
2021/Day10/: Day 10 - Advent of Code 2021.html
2021/Day11/: Day 11 - Advent of Code 2021.html
2021/Day11/1.1/: main.py
2021/Day11/1.2/: main.py
2021/Day2/: Day 2 - Advent of Code 2021.html
2021/Day2/1.1/: main.py
2021/Day2/1.2/: main.py
2021/Day3/: Day 3 - Advent of Code 2021.html
2021/Day3/1.1/: main.py
2021/Day3/1.2/: main.py
2021/Day4/: Day 4 - Advent of Code 2021.html
2021/Day4/1.1/: main.py
2021/Day5/: Day 5 - Advent of Code 2021.html
2021/Day5/1.1/: main.py
2021/Day5/1.2/: main.py
2021/Day6/1.1/: main.py
2021/Day7/: Day 7 - Advent of Code 2021.html
2021/Day7/1.1/: main.py
2021/Day8/: Day 8 - Advent of Code 2021.html
2021/Day8/1.1/: main.py
2021/Day9/1.2/: main.py
2021/python/1.1/: main.py
2021/python/1.2/: main.py
2021/python/10.1/: main.py
2021/python/8.2/: main.py
2021/python/9.1/: main.py
2021/rust/Day1/sonar-sweep/: Cargo.toml
2021/rust/Day2/dive/: Cargo.toml  output.txt
2021/rust/Day3/binary-diagnostic/: Cargo.toml
2022/rust/Day1/calorie-counting/: Cargo.toml
2022/rust/Day10/cathode-ray-tube/: Cargo.toml
2022/rust/Day11/monkey-in-the-middle/: Cargo.toml
2022/rust/Day11/monkey-in-the-middle/src/: main.rs
2022/rust/Day12/hill-climbing-algorithm/: Cargo.toml  input.txt
Day10/1.2/: main.py
Day4/1.2/: main.py
Day6/: Day 6 - Advent of Code 2021.html
Day7/1.2/: main.py
Day9/: Day 9 - Advent of Code 2021.html
(+46 files in other folders)
