[package]
name = "monkey-in-the-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
nom = "7.1.1"
lending-iterator = "0.1.6"


[lib]
name = "io"
path = "../../lib/utilities/src/io.rs"